--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Test Build and Push to DockerHub CI/CD
+name: Test Build and Push to DockerHub and AWS ECR
 
 # Trigger on push and pull request events to main branch
 on:
@@ -8,8 +8,14 @@ on:
     branches: [ main ]
 
 env:
+  # Docker Hub Configuration
   REGISTRY: docker.io
   IMAGE_NAME: pranavyaligouda/express-app
+
+  # AWS ECR Configuration
+  AWS_REGION: ap-south-1
+  ECR_REGISTRY: 741916656498.dkr.ecr.ap-south-1.amazonaws.com
+  ECR_REPOSITORY: express-app
 
 jobs:
   build-test-push:
@@ -24,14 +30,14 @@ jobs:
     - name: Build Docker image
       run: |
         echo "Building Docker image"
-        docker build -t ${{env.IMAGE_NAME}}:test .
+        docker build -t ${{ env.IMAGE_NAME }}:test .
         echo "Docker image built successfully"
 
     #Test the built image
     - name: Test Docker container
       run: |
         echo "Running tests on Docker container"
-        docker run -d -p 8080:8080 -e PORT=8080 --name test-app ${{env.IMAGE_NAME}}:test
+        docker run -d -p 8080:8080 -e PORT=8080 --name test-app ${{ env.IMAGE_NAME }}:test
         echo "waiting for application startup..."
         sleep 10
 
@@ -50,10 +56,11 @@ jobs:
         echo "Test container removed"
 
     # Setup Docker Buildx
-    - name: set up Docker Buildx
+    - name: Set up Docker Buildx
+      if: github.event_name != 'pull_request'
       uses: docker/setup-buildx-action@v3
 
-    # Login to DockerHub
+    # Registry Authentication
     - name: Login to DockerHub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -61,6 +68,20 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Configure AWS credentials
+      if: github.event_name != 'pull_request'
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+        mask-aws-account-id: 'true' # Mask AWS account ID in logs
+
+    - name: Login to Amazon ECR
+      if: github.event_name != 'pull_request'
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
 
     # Build and push Docker image
     - name: Build and Push Docker image
@@ -74,6 +95,20 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
+
+    # Build & Push to AWS ECR
+    - name: Build and push to Amazon ECR
+      if: github.event_name != 'pull_request'
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+          ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     # Deploy trigger to Render.com
     - name: Deploy to Render
